Fixing popup on mobile

--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -30,7 +30,7 @@
 .popup {
 	position: fixed; /* Stay in place */
 	z-index: 999; /* Sit on top */
-	padding-top: 350px; /* Location of the box */
+	padding-top: 100px; /* Location of the box */
 	left: 0;
 	top: 0;
 	width: 100%; /* Full width */
